feat: init firebase

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,13 @@ migrate_working_dir/
 # is commented out by default.
 #.vscode/
 
+
+# Firebase 설정 파일
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
+firebase_options.dart
+firebase.json
+
 # Flutter/Dart/Pub related
 **/doc/api/
 **/ios/Flutter/.last_build_id
