--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_core: ^3.13.0
   google_sign_in: ^6.3.0
   firebase_auth: ^5.5.3
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
