--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -12,6 +12,7 @@
 	<string>로컬 네트워크 접근이 필요합니다.</string>
 	
 
+
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -75,5 +76,23 @@
 		<string>com.google.chrome.ios.incognito</string>
 		<string>googlechrome</string>
 	</array>
+
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>google</string>
+        <string>com.google</string>
+        <string>com.google.chrome.ios</string>
+        <string>com.google.chrome.ios.open</string>
+        <string>com.google.chrome.ios.incognito</string>
+        <string>googlechrome</string>
+    </array>
+
+    <!-- 이미지 권한 -->
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>사진을 선택하기 위해 권한이 필요합니다.</string>
+    <key>NSCameraUsageDescription</key>
+	<string>사진을 찍기 위해 카메라 접근이 필요합니다.</string>
+
+
 </dict>
 </plist>
