--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter_riverpod: ^2.6.1
   cloud_firestore: ^5.6.7
   intl: ^0.20.2
+  image_picker: ^1.1.2
+  http: ^1.4.0
 
 
 dev_dependencies:
