--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   google_sign_in: ^6.3.0
   firebase_auth: ^5.5.3
   flutter_riverpod: ^2.6.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
