--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   google_sign_in: ^6.3.0
   firebase_auth: ^5.5.3
   flutter_riverpod: ^2.6.1
+  cloud_firestore: ^5.6.7
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +25,4 @@ flutter:
 
   assets:
     - assets/image/
+    - assets/images/
