build : uuid, firebase_storage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
       ref: main
   provider: ^6.1.5
   firebase_storage: ^12.4.5
+  uuid: ^4.5.1
+
 
 dev_dependencies:
   flutter_test:
