--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
       url: https://github.com/fhelper/flutter-yolo-helper.git
       ref: main
   provider: ^6.1.5
+  go_router: ^15.1.2
 
 
 
