--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
       ref: main
   provider: ^6.1.5
   go_router: ^15.1.2
+  carousel_slider: ^5.0.0
+  smooth_page_indicator: ^1.2.1
 
 
 
