--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -93,6 +93,8 @@
     <key>NSCameraUsageDescription</key>
 	<string>사진을 찍기 위해 카메라 접근이 필요합니다.</string>
 
+	<key>GADApplicationIdentifier</key>
+    <string>ios 앱 ID를 넣어주세요.</string>
 
 </dict>
 </plist>
