--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   firebase_storage: ^12.4.5
   uuid: ^4.5.1
+  google_mobile_ads: ^6.0.0
 
 
 dev_dependencies:
