--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -94,7 +94,7 @@
 	<string>사진을 찍기 위해 카메라 접근이 필요합니다.</string>
 
 	<key>GADApplicationIdentifier</key>
-    <string>ios 앱 ID를 넣어주세요.</string>
+    <string>ca-app-pub-8918591811866398~5962983517</string>
 
 </dict>
 </plist>
