--- a/functions/package.json
+++ b/functions/package.json
@@ -18,9 +18,11 @@
     "firebase-functions": "^6.0.1"
   },
   "devDependencies": {
-    "eslint": "^8.15.0",
+    "@eslint/js": "^9.27.0",
+    "eslint": "^9.27.0",
     "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^3.1.0"
+    "firebase-functions-test": "^3.1.0",
+    "globals": "^16.1.0"
   },
   "private": true
 }
