--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_storage: ^12.4.5
   uuid: ^4.5.1
   google_mobile_ads: ^6.0.0
+  flutter_dotenv: ^5.2.1
 
 
 dev_dependencies:
@@ -46,3 +47,4 @@ flutter:
     - assets/models/yolov8n.tflite
     - assets/models/labels.txt
     - assets/images/
+    - .env
