--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   uuid: ^4.5.1
   google_mobile_ads: ^6.0.0
   flutter_dotenv: ^5.2.1
+  flutter_local_notifications: ^19.2.1
+  timezone: ^0.10.1
 
 
 dev_dependencies:
