feat: sentry init

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   flutter_local_notifications: ^19.2.1
   timezone: ^0.10.1
+  sentry_flutter: ^8.14.2
 
 
 dev_dependencies:
