--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
 
     <application
-        android:label="gangaji_pul"
+        android:label="강아지풀"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
