--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   sentry_flutter: ^8.14.2
   app_settings: ^6.1.1
   flutter_launcher_icons: ^0.11.0
+  lottie: ^3.3.0
 
 dev_dependencies:
   flutter_test:
