--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ app.*.map.json
 macos/Flutter/GeneratedPluginRegistrant.swift
 windows/flutter/generated_plugin_registrant.cc
 windows/flutter/generated_plugins.cmake
+android/key.properites
