--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "com.sparta" "\0"
             VALUE "FileDescription", "gangaji_pul" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "gangaji_pul" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2025 com.sparta. All rights reserved." "\0"
             VALUE "OriginalFilename", "gangaji_pul.exe" "\0"
             VALUE "ProductName", "gangaji_pul" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
